# epos2_motor_controller

./: CHANGELOG.rst  CMakeLists.txt  Findepos2_motor_controller.cmake  README.md  ReadMe.txt  dependencies  package.xml
cmake/: FindFTDI.cmake
debian/: README.Debian  README.source  changelog  control  copyright  gbp.conf  libepos2-0.udev  libepos2-dev.install  rules
doc/: 91-epos2.rules
src/: CMakeLists.txt  Epos2.cpp  Epos2.h  epos2exceptions.cpp  epos2exceptions.h
src/examples/: CMakeLists.txt  configtest.cpp  test_delays.cpp  test_epos2.cpp  test_homing.cpp  test_like_h3d.cpp  test_marker.cpp  test_positions.cpp
