<?xml version="1.0"?>
<package format="2">
  <name>libepos2</name>
  <version>1.0.1</version>
  <description>EPOS2 motor controller driver</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>LGPL</license>
  <author email="mmorta@iri.upc.edu">Martí Morta Garriga</author>
  <author email="jochen@sprickerhof.de">Jochen Sprickerhof</author>

  <depend>libftdipp1-dev</depend>
  <!-- <buildtool_depend>cmake</buildtool_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- <build_type>cmake</build_type> -->
  </export>
</package>
